--- a/views/bookmark_details.erb
+++ b/views/bookmark_details.erb
@@ -28,7 +28,7 @@
             <p>Description: <%=@description%></p>
             <p>Content: <%=@content%></p>
             <p>Rating: <%=@rate%></p>
-            <p>Number of Ratwings: <%=@num_of_rate%></p>
+            <p>Number of Ratings: <%=@num_of_rate%></p>
             <p>Creating Date: <%=@date%></p>   
           <form method="post" action="/view_bookmarks/details/rating">
             <input type="hidden" name="id" value="<%=@id%>">
