finish the edit page

--- a/views/my_bookmarks.erb
+++ b/views/my_bookmarks.erb
@@ -22,7 +22,7 @@
 			<h2>My Bookmarks</h2>
       <div class="TableHolder">       
       <table>
-        <tr><th>ID</th><th>Title</th><th>Date</th><th></th><th>Details</th></tr>
+        <tr><th>ID</th><th>Title</th><th>Date</th><th></th><th></th></tr>
         <% @list.each do |bookmark| %>
           <tr>
               <td><%=bookmark[:id]%></td>
