try a few system tests and add more function to bookmark part

--- a/views/adding_bookmarks.erb
+++ b/views/adding_bookmarks.erb
@@ -26,8 +26,10 @@
             <p>
             Title<input name="bm_title" type="text" value="<%=@title%>">
             Description<input name="bm_description" type="text" value="<%=@description%>">
-            <input name="bm_author" type="hidden" value="<%=session[:name]%>">
-            Content<input type="text" name="bm_content"  value="<%=@content%>" maxlength="400" size="20">
+            Author<input name="bm_author" type="text" value="<%=@author%>">    
+            <br><br>
+            <textarea name="bm_content" placeholder="Please type your content here..." rows="5" cols="92"></textarea>    
+            </p>
             <p><input type="submit" value="Add"></p>
         </form>
           <%if @validation==false %>
