--- a/views/home.erb
+++ b/views/home.erb
@@ -24,7 +24,7 @@
 			<p>Please select one of the services below.</p>
 			<hr>
 			<% if !session[:login] %>
-	            <form  methood='get' action='/login' >
+	            <form  methood='get' action='/login' class="login1" >
 	              <input type="submit" value="Log In">  
 	            </form>
 	             <form  methood='get' action='/register'>
