--- a/views/home.erb
+++ b/views/home.erb
@@ -50,7 +50,7 @@
              <h2>View as a guest</h2>
             <%end%>
             <form  methood='get' action='/view_bookmarks'>
-                  <input type="submit" value="View all bookmarks">
+                  <input type="submit" value="View All Bookmarks">
             </form> 
         	
             
