--- a/views/register.erb
+++ b/views/register.erb
@@ -26,7 +26,7 @@
             E-mail:<input name="email" type="text" value="<%=@email%>">
             Mobile Number:<input name="phone_number" type="text" value="<%=@mobile_number%>">
             Password:<input name="password" type="password" value="<%=@password%>"> 
-            Confirm Password: <input name="confirm_password" type="password" value="<%=@password%>">
+            Confirm Password: <input name="confirm_password" type="password" value="<%=@confirm_password%>">
             </p>
             <input type="submit" value="Register">
         </form>
@@ -37,7 +37,7 @@
           <p id=failure_text>Please ensure all fields are filled correctly.</p>
         <% end %>
         <%if @confirmation==false %>
-          <p id=failure_text>The "Password" and "Confirm Password" are not the same</p>
+          <p id=failure_text>The 'Password' and 'Confirm Password' are not the same</p>
         <% end %>
         <%if @unique_email==false %>
           <p id=failure_text>Your email has been taken.Please use another one.</p>
