changed username to username or email and added accounts

--- a/views/register.erb
+++ b/views/register.erb
@@ -23,7 +23,7 @@
             <p>
             Firstname:<input name="firstname" type="text" value="<%=@firstname%>">
             Surname:<input name="surname" type="text" value="<%=@surname%>">
-            E-mail:<input name="email" type="text" value="<%=@email%>">
+            Username / E-mail:<input name="email" type="text" value="<%=@email%>">
             Mobile Number:<input name="phone_number" type="text" value="<%=@mobile_number%>">
             Password:<input name="password" type="password" value="<%=@password%>"> 
             Confirm Password: <input name="confirm_password" type="password" value="<%=@confirm_password%>">
@@ -40,10 +40,10 @@
           <p id=failure_text>The 'Password' and 'Confirm Password' are not the same</p>
         <% end %>
         <%if @unique_email==false %>
-          <p id=failure_text>Your email has been taken.Please use another one.</p>
+          <p id=failure_text>Your Username / E-mail has been taken. Please use another one.</p>
         <% end %>
         <%if @valid_email==false %>
-          <p id=failure_text>Your email address is invalid.Please change it.</p>
+          <p id=failure_text>Your email address is invalid. Please change it.</p>
         <% end %>
         </div>
 	</main>
