--- a/views/user_details.erb
+++ b/views/user_details.erb
@@ -25,7 +25,7 @@
             <p>user_id: <%=@id%></p>
             <p>Firstname: <%=@firstname%></p>
             <p>Surname: <%=@surname%></p>
-            <p>Email: <%=@email%></p>
+            <p>Username / Email: <%=@email%></p>
             <p>Phone: <%=@phone%></p>
             <p>Password: <%=@password%></p>
             <p>Access Level: <%=@access_level%></p>   
