--- a/views/login.erb
+++ b/views/login.erb
@@ -22,7 +22,7 @@
 			<h2>Log In</h2>
 			<form method='post' action="/login">
            <p>
-            Username / E-mail:<input name="email" type="text" value="<%=@username%>">
+            Username: <input name="username" type="text" value="<%=@username%>">
             </p>
             <p>
             Password:<input name="password" type="password" value="<%=@password%>">
