Add the features for request

--- a/views/view_request.erb
+++ b/views/view_request.erb
@@ -50,10 +50,10 @@
           </tr>
              <tr>
               <% if request[:read] == 1 %>
-              <td>Unread</td>
+              <td class="r">Unread</td>
               <% end %>
               <% if request[:read] == 0 %>
-              <td>Read</td>
+              <td class="r">Read</td>
               <% end %>
               </tr>
          </table>
