--- a/views/home.erb
+++ b/views/home.erb
@@ -36,7 +36,7 @@
            			<input type="submit" value="View Users">  
          		</form> 
                 <form  methood='get' action='/view_request'>
-           			<input type="submit" value="View request">  
+           			<input type="submit" value="View Request">  
          		</form> 
         	<% end %>
             <%if session[:role]=="admin" || session[:role]=="employee"  %>
