--- a/views/edit.erb
+++ b/views/edit.erb
@@ -27,6 +27,37 @@
             <p>Title<input name="title" type="text" value="<%=@title%>"></p>
             <p>Author<input name="author" type="text" value="<%=@author%>"></p>
             <p>Description<input name="description" type="text" value="<%=@description%>"></p>
+            <h2>You can change or add tags</h2> 
+            <select name="select_tag1">    
+                <option value="null">None</option>
+                <% @list.each do |tags| %>
+                 <%if(@tag1==tags[:name])%>
+                  <option value="<%=tags[:name]%>" selected><%=tags[:name]%></option> 
+                 <%else%>
+                  <option value="<%=tags[:name]%>"><%=tags[:name]%></option>
+                 <%end%> 
+                <%end%>
+            </select>
+            <select name="select_tag2">    
+                <option value="null">None</option>
+                <% @list.each do |tags| %>
+                  <%if(@tag2==tags[:name])%>
+                   <option value="<%=tags[:name]%>" selected><%=tags[:name]%></option> 
+                  <%else%>
+                   <option value="<%=tags[:name]%>"><%=tags[:name]%></option>
+                  <%end%> 
+                <%end%>
+            </select>
+             <select name="select_tag3">    
+                <option value="null">None</option>
+                <% @list.each do |tags| %>
+                 <%if(@tag3==tags[:name])%>
+                  <option value="<%=tags[:name]%>" selected><%=tags[:name]%></option> 
+                 <%else%>
+                  <option value="<%=tags[:name]%>"><%=tags[:name]%></option>
+                 <%end%> 
+                <%end%>
+            </select>
             <p><label for="content">Content</label>  
             <textarea name="content"  rows="5" cols="92"><%=@content%></textarea> </p>   
             <input type="submit" value="Save">
