--- a/views/home.erb
+++ b/views/home.erb
@@ -55,9 +55,17 @@
             <form  methood='get' action='/view_bookmarks'>
                   <input type="submit" value="View All Bookmarks">
             </form> 
-        	
-            
-       
+            <%if session[:role]=="admin"%> 
+             <form  methood='get' action='/create_tag'>
+                  <input type="submit" value="Create Tag">
+             </form>
+            <%end%>
+            <%if session[:login]&&session[:role]!="admin"%> 
+             <form  methood='get' action='/request'>
+                  <input type="submit" value="Request">
+             </form>
+            <%end%>
+        	   
         </div>
 	</main>
     </div>
