finish all the function with tags and all the system test

--- a/views/adding_bookmarks.erb
+++ b/views/adding_bookmarks.erb
@@ -29,21 +29,21 @@
             Author<input name="author" type="text" value="<%=@author%>">  </p>  
             <h2>If you want add tags(3 tags at most)</h2> 
             <select name="select_tag1">    
-                <option value="null">None</option>
+                <option name="null" value="null">None</option>
                 <% @list.each do |tags| %>
-                 <option value="<%=tags[:name]%>"><%=tags[:name]%></option> 
+                 <option name="<%=tags[:name]%>" value="<%=tags[:name]%>"><%=tags[:name]%></option> 
                 <%end%>
             </select>
             <select name="select_tag2">    
-                <option value="null">None</option>
+                <option name="null" value="null">None</option>
                 <% @list.each do |tags| %>
-                 <option value="<%=tags[:name]%>"><%=tags[:name]%></option> 
+                 <option name="<%=tags[:name]%>" value="<%=tags[:name]%>"><%=tags[:name]%></option> 
                 <%end%>
             </select>
             <select name="select_tag3">    
-                <option value="null">None</option>
+                <option name="null" value="null">None</option>
                 <% @list.each do |tags| %>
-                 <option value="<%=tags[:name]%>"><%=tags[:name]%></option> 
+                 <option name="<%=tags[:name]%>" value="<%=tags[:name]%>"><%=tags[:name]%></option> 
                 <%end%>
             </select>
             <p><label for="content">Content</label>  
