--- a/views/edit.erb
+++ b/views/edit.erb
@@ -29,32 +29,32 @@
             <p>Description<input name="description" type="text" value="<%=@description%>"></p>
             <h2>You can change or add tags</h2> 
             <select name="select_tag1">    
-                <option value="null">None</option>
+                <option name="null" value="null">None</option>
                 <% @list.each do |tags| %>
                  <%if(@tag1==tags[:name])%>
-                  <option value="<%=tags[:name]%>" selected><%=tags[:name]%></option> 
+                  <option name="<%=tags[:name]%>" value="<%=tags[:name]%>" selected><%=tags[:name]%></option> 
                  <%else%>
-                  <option value="<%=tags[:name]%>"><%=tags[:name]%></option>
+                  <option name="<%=tags[:name]%>" value="<%=tags[:name]%>"><%=tags[:name]%></option>
                  <%end%> 
                 <%end%>
             </select>
             <select name="select_tag2">    
-                <option value="null">None</option>
+                <option name="null" value="null">None</option>
                 <% @list.each do |tags| %>
                   <%if(@tag2==tags[:name])%>
-                   <option value="<%=tags[:name]%>" selected><%=tags[:name]%></option> 
+                   <option  name="<%=tags[:name]%>" value="<%=tags[:name]%>" selected><%=tags[:name]%></option> 
                   <%else%>
-                   <option value="<%=tags[:name]%>"><%=tags[:name]%></option>
+                   <option name="<%=tags[:name]%>" value="<%=tags[:name]%>"><%=tags[:name]%></option>
                   <%end%> 
                 <%end%>
             </select>
              <select name="select_tag3">    
-                <option value="null">None</option>
+                <option  name="null" value="null">None</option>
                 <% @list.each do |tags| %>
                  <%if(@tag3==tags[:name])%>
-                  <option value="<%=tags[:name]%>" selected><%=tags[:name]%></option> 
+                  <option name="<%=tags[:name]%>" value="<%=tags[:name]%>" selected><%=tags[:name]%></option> 
                  <%else%>
-                  <option value="<%=tags[:name]%>"><%=tags[:name]%></option>
+                  <option name="<%=tags[:name]%>" value="<%=tags[:name]%>"><%=tags[:name]%></option>
                  <%end%> 
                 <%end%>
             </select>
