--- a/public/css/general.css
+++ b/public/css/general.css
@@ -66,7 +66,7 @@ nav a:hover{
 #failure_text{
 	color: rgb(224, 155, 4);
 }
-input[type=text],[type=password]  {
+input[type=text],[type=password],textarea  {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -122,6 +122,7 @@ table {
       border: 1px solid rgb(48,48,48);
       width: 98%;
       margin: 0 1% 1em 1%;
+      table-layout: fixed
     }
 th, td {
     padding: 8px;
