--- a/views/add_comment.erb
+++ b/views/add_comment.erb
@@ -13,7 +13,9 @@
 	<header>
 		<h1>Bookmark Manager</h1>
 	</header>
- 
+   <nav>
+        <a href="/view_bookmarks/details">Back to details</a>
+  </nav>
 	<main>
 		<div class="contentSmallForm">
 			<h2>Adding Comment</h2>          
