--- a/views/create_request.erb
+++ b/views/create_request.erb
@@ -13,7 +13,9 @@
 	<header>
 		<h1>Bookmark Manager</h1>
 	</header>
- 
+  <nav>
+        <a href="/">Home</a>
+  </nav>
 	<main>
 		<div class="contentSmallForm">
 			<h2>Request</h2>          
@@ -38,9 +40,6 @@
 	</main>
     </div>
 	<footer>
-		<ul>
-			<li><a href="/">Back to homepage</a></li>
-		</ul>
 		<hr>
 		<p>COM1001, 2020</p>
 	</footer>
