--- a/views/set_password.erb
+++ b/views/set_password.erb
@@ -15,9 +15,7 @@
     <h1>Bookmark Manager</h1>
   </header>
   <nav>
-        <a href="/logout">Log Out</a>
-        <a href="/">Home</a>
-        <a href="/check_all_users/details/back">Back To Users</a>
+        <a href="/check_all_users/details">Back to details</a>
   </nav>
   <main>
     <div class="contentSmallForm">
@@ -39,9 +37,6 @@
   </main>
   </div>
   <footer>
-    <ul>
-      <li><a href="/">Back to homepage</a></li>
-    </ul>
     <hr>
     <p>COM1001, 2020</p>
   </footer>
